@@ -104,8 +104,8 @@ sub configure {
     my ($name, $class, $conf) = @$spec;
 
     # ignore the prefix (@Bundle/Name => Name) (DZP::Name => Name)
-    (my $alias   = $name ) =~ s/^${\ $self->name }\///;
-    (my $moniker = $class) =~ s/^Dist::Zilla::Plugin(?:Bundle):://;
+    my ($alias)   = ($name  =~ m#([^/]+)$#);
+    my ($moniker) = ($class =~ m#^(?:Dist::Zilla::Plugin(?:Bundle)::)?(.+)$#);
 
     # exclude any plugins that match 'skip_plugins'
     if( $skip ){
